--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ backend/__pycache__/
 *.pyc
 
 # Ignore Frontend Junk
-frontend/node_modules/
+node_modules/
 frontend/dist/
 
 # Ignore Secrets (CRITICAL!)
